--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <a href="bubbleChart.html" class="btn btn-default" role="button">Bubble</a>
                     <a href="force.html" class="btn btn-default" role="button">Force</a>
                     <a href="globe.html" class="btn btn-default" role="button">Globe</a>
+                    <a href="hello-world.html" class="btn btn-default" role="button">Hello D3.js</a>
                     <a href="https://d3js.org" class="btn btn-default" role="button">D3.js</a>
                 </div>
             </div>
