--- a/pages/africa.html
+++ b/pages/africa.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <title>geoPath measures</title>
 </head>
 
