--- a/pages/gesu-teaching.html
+++ b/pages/gesu-teaching.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-	<script type="text/javascript" src="d3/d3.v4.js"></script>
-
+	<link rel="stylesheet" href="./static/bootstrap/3.3.6/css/bootstrap.min.css">
+	<script type="text/javascript" src="./static/js/d3/d3.v4.js"></script>
 	<title>d3 Examples</title>
 </head>
 <body>
@@ -13,21 +12,21 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-2">
-				<img src="resources/d3logo.png">
+				<img src="./static/d3logo.png">
 			</div>
 			<div class="col-md-10">
 				<h1 class="logo">D3 Examples</h1>
 				<h4>Richard Dalton</h4>
 				<div class="btn-group btn-group-md" role="group" aria-label="...">
-					<a href="index.html" class="btn btn-default" role="button">Home</a>
-					<a href="svg.html" class="btn btn-default" role="button">SVG</a>
-					<a href="barChart.html" class="btn btn-default" role="button">Bar</a>
-					<a href="pieChart.html" class="btn btn-default" role="button">Pie</a>
-					<a href="bubbleChart.html" class="btn btn-default" role="button">Bubble</a>
-					<a href="force.html" class="btn btn-default" role="button">Force</a>
-					<a href="globe.html" class="btn btn-default" role="button">Globe</a>
-					<a href="hello-world.html" class="btn btn-default" role="button">hello-world</a>
-					<a href="https://d3js.org" class="btn btn-default" role="button">D3.js</a>
+					<a href="./pages/index.html" class="btn btn-default" role="button">Home</a>
+					<a href="./pages/svg.html" class="btn btn-default" role="button">SVG</a>
+					<a href="./pages/barChart.html" class="btn btn-default" role="button">Bar</a>
+					<a href="./pages/pieChart.html" class="btn btn-default" role="button">Pie</a>
+					<a href="./pages/bubbleChart.html" class="btn btn-default" role="button">Bubble</a>
+					<a href="./pages/force.html" class="btn btn-default" role="button">Force</a>
+					<a href="./pages/globe.html" class="btn btn-default" role="button">Globe</a>
+					<a href="./pages/gesu-teaching.html" class="btn btn-default" role="button">gesu-teaching</a>
+					<a href="http://d3js.org" class="btn btn-default" role="button">D3.js</a>
 				</div>
 			</div>
 		</div>
@@ -44,7 +43,7 @@
 	</div>
 	<div class="col-md-6">
 		<!-- Add a svg shape. Note that the 'target' class is attributed to the circle -->
-		<svg> 
+		<svg>
 			<circle class="target" style="fill: #69b3a2" stroke="black" cx=50 cy=50 r=40></circle>
 		</svg>
 	</div>
