--- a/pages/svg.html
+++ b/pages/svg.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <script type="text/javascript" src="d3/d3.v3.js"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="./static/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script type="text/javascript" src="./../d3/d3.v3.js"></script>
 
     <title>d3 Examples</title>
 </head>
@@ -13,20 +14,20 @@
     <div class="container">
         <div class="row">
             <div class="col-md-2">
-                <img src="resources/d3logo.png">
+                <img src="./static/d3logo.png">
             </div>
             <div class="col-md-10">
                 <h1 class="logo">D3 Examples</h1>
                 <h4>Richard Dalton</h4>
                 <div class="btn-group btn-group-md" role="group" aria-label="...">
-                    <a href="index.html" class="btn btn-default" role="button">Home</a>
-                    <a href="svg.html" class="btn btn-default" role="button">SVG</a>
-                    <a href="barChart.html" class="btn btn-default" role="button">Bar</a>
-                    <a href="pieChart.html" class="btn btn-default" role="button">Pie</a>
-                    <a href="bubbleChart.html" class="btn btn-default" role="button">Bubble</a>
-                    <a href="force.html" class="btn btn-default" role="button">Force</a>
-                    <a href="globe.html" class="btn btn-default" role="button">Globe</a>
-                    <a href="https://d3js.org" class="btn btn-default" role="button">D3.js</a>
+                    <a href="./pages/index.html" class="btn btn-default" role="button">Home</a>
+                    <a href="./pages/svg.html" class="btn btn-default" role="button">SVG</a>
+                    <a href="./pages/barChart.html" class="btn btn-default" role="button">Bar</a>
+                    <a href="./pages/pieChart.html" class="btn btn-default" role="button">Pie</a>
+                    <a href="./pages/bubbleChart.html" class="btn btn-default" role="button">Bubble</a>
+                    <a href="./pages/force.html" class="btn btn-default" role="button">Force</a>
+                    <a href="./pages/globe.html" class="btn btn-default" role="button">Globe</a>
+                    <a href="http://d3js.org" class="btn btn-default" role="button">D3.js</a>
                 </div>
             </div>
         </div>
@@ -54,7 +55,7 @@
     data1 = [50, 60, 70, 30, 20, 10];
     data2 = [30, 80, 20, 40];
     dataIndex = 1;
-    
+
     var colors = d3.scale.category10();
 
     //Create SVG element
@@ -83,7 +84,7 @@
             .text("change data")
             .on("click",function(){
                 if (dataIndex==1) {
-                    dataIndex=2;  
+                    dataIndex=2;
                 } else   {
                     dataIndex=1;
                 }
@@ -135,7 +136,7 @@
         .text("change data")
         .on("click",function(){
             if (selectedData==data1) {
-                selectedData=data2;  
+                selectedData=data2;
             } else   {
                 selectedData=data1;
             }
