Add VSC stuff, fix paths, add cached libs

--- a/pages/ireland.html
+++ b/pages/ireland.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="./../favicon.ico">
     <style>
         svg {
             background: #fff;
@@ -25,10 +25,10 @@
     </style>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <title>Irish Choropleth Example</title>
-    <script type="text/javascript" src="./static/js/d3/d3.v2.js"></script>
+    <script type="text/javascript" src="./../static/js/d3/d3.v2.js"></script>
 </head>
 <body>
 	<div id="chart"></div>
-	<script type="text/javascript" src="./static/js/choropleth.js"></script>
+	<script type="text/javascript" src="./../static/js/choropleth.js"></script>
 </body>
 </html>
