--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
     <link rel="stylesheet" href="./static/bootstrap/3.3.6/css/bootstrap.min.css">
     <script type="text/javascript" src="./static/js/d3/d3.v3.js"></script>
 
