--- a/pages/africa.html
+++ b/pages/africa.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="./../favicon.ico">
     <title>geoPath measures</title>
 </head>
 
@@ -49,7 +49,7 @@
 </div>
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.9.1/d3.min.js"></script>
+<script src="./../static/js/d3/min/d3.v4-9-1.min.js"></script>
 
 <script>
 
