--- a/pages/force.html
+++ b/pages/force.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-	<link rel="stylesheet" href="./static/bootstrap/3.3.6/css/bootstrap.min.css">
-	<script type="text/javascript" src="./../d3/d3.v3.js"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="./../favicon.ico">
+	<link rel="stylesheet" href="./../static/bootstrap/3.3.6/css/bootstrap.min.css">
+	<script type="text/javascript" src="./../static/js/d3/d3.v3.js"></script>
 
 	<title>d3 Examples</title>
 </head>
@@ -14,7 +14,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-2">
-				<img src="./static/d3logo.png">
+				<img src="./../static/d3logo.png">
 			</div>
 			<div class="col-md-10">
 				<h1 class="logo">D3 Examples</h1>
