--- a/pages/tangled-tree.html
+++ b/pages/tangled-tree.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="./static/bootstrap/3.3.6/css/bootstrap.min.css">
-	<script type="text/javascript" src="./../d3/d3.v3.js"></script>
+	<link rel="stylesheet" href="./../static/bootstrap/3.3.6/css/bootstrap.min.css">
+	<script type="text/javascript" src="./../static/js/d3/d3.v3.js"></script>
 
 	<title>d3 Examples</title>
 </head>
@@ -13,7 +13,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-2">
-				<img src="./static/d3logo.png">
+				<img src="./../static/d3logo.png">
 			</div>
 			<div class="col-md-10">
 				<h1 class="logo">D3 Examples</h1>
