Fix pathes, add new cache data

--- a/pages/africa.html
+++ b/pages/africa.html
@@ -96,7 +96,7 @@
 
 
     // REQUEST DATA
-    d3.json('https://gist.githubusercontent.com/d3indepth/3ccd770923a61f26f55156657e2f51e8/raw/9a33b25b8d6cfece3bc7ea5379c733709b00fbe1/africa.json', function(err, json) {
+    d3.json('./static/data/africa.json', function(err, json) {
         update(json)
     })
 
