--- a/pages/force.html
+++ b/pages/force.html
@@ -20,13 +20,13 @@
 				<h1 class="logo">D3 Examples</h1>
 				<h4>Richard Dalton</h4>
 				<div class="btn-group btn-group-md" role="group" aria-label="...">
-					<a href="./pages/index.html" class="btn btn-default" role="button">Home</a>
-					<a href="./pages/svg.html" class="btn btn-default" role="button">SVG</a>
-					<a href="./pages/barChart.html" class="btn btn-default" role="button">Bar</a>
-					<a href="./pages/pieChart.html" class="btn btn-default" role="button">Pie</a>
-					<a href="./pages/bubbleChart.html" class="btn btn-default" role="button">Bubble</a>
-                    <a href="./pages/force.html" class="btn btn-default" role="button">Force</a>
-                    <a href="./pages/globe.html" class="btn btn-default" role="button">Globe</a>
+					<a href="./index.html" class="btn btn-default" role="button">Home</a>
+					<a href="./svg.html" class="btn btn-default" role="button">SVG</a>
+					<a href="./barChart.html" class="btn btn-default" role="button">Bar</a>
+					<a href="./pieChart.html" class="btn btn-default" role="button">Pie</a>
+					<a href="./bubbleChart.html" class="btn btn-default" role="button">Bubble</a>
+                    <a href="./force.html" class="btn btn-default" role="button">Force</a>
+                    <a href="./globe.html" class="btn btn-default" role="button">Globe</a>
                     <a href="http://d3js.org" class="btn btn-default" role="button">D3.js</a>
 				</div>
 			</div>
