--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h1 class="logo">D3 Examples</h1>
                 <h4>Richard Dalton</h4>
                 <div class="btn-group btn-group-md" role="group" aria-label="...">
-                    <a href="./pages/index.html" class="btn btn-default" role="button">Home</a>
+                    <a href="./index.html" class="btn btn-default" role="button">Home</a>
                     <a href="./pages/svg.html" class="btn btn-default" role="button">SVG</a>
                     <a href="./pages/barChart.html" class="btn btn-default" role="button">Bar</a>
                     <a href="./pages/pieChart.html" class="btn btn-default" role="button">Pie</a>
