--- a/pages/force.html
+++ b/pages/force.html
@@ -20,7 +20,7 @@
 				<h1 class="logo">D3 Examples</h1>
 				<h4>Richard Dalton</h4>
 				<div class="btn-group btn-group-md" role="group" aria-label="...">
-					<a href="./index.html" class="btn btn-default" role="button">Home</a>
+					<a href="./../index.html" class="btn btn-default" role="button">Home</a>
 					<a href="./svg.html" class="btn btn-default" role="button">SVG</a>
 					<a href="./barChart.html" class="btn btn-default" role="button">Bar</a>
 					<a href="./pieChart.html" class="btn btn-default" role="button">Pie</a>
