Add robots.txt, css map

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="robots" content="index, follow" />
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
     <link rel="stylesheet" href="./static/bootstrap/3.3.6/css/bootstrap.min.css">
     <script type="text/javascript" src="./static/js/d3/d3.v3.js"></script>
 
-    <title>d3 Examples</title>
+    <title>D3 Examples</title>
 </head>
 <body>
 
