--- a/pages/tangled-tree.html
+++ b/pages/tangled-tree.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link rel="shortcut icon" type="image/x-icon" href="./../favicon.ico">
 	<link rel="stylesheet" href="./../static/bootstrap/3.3.6/css/bootstrap.min.css">
 	<script type="text/javascript" src="./../static/js/d3/d3.v3.js"></script>
 
-	<title>d3 Examples</title>
+	<title>D3 Examples</title>
 </head>
 <body>
 
@@ -26,6 +28,7 @@
 					<a href="./bubbleChart.html" class="btn btn-default" role="button">Bubble</a>
                     <a href="./force.html" class="btn btn-default" role="button">Force</a>
                     <a href="./globe.html" class="btn btn-default" role="button">Globe</a>
+					<a href="./gesu-teaching.html" class="btn btn-default" role="button">gesu-teaching</a>
                     <a href="http://d3js.org" class="btn btn-default" role="button">D3.js</a>
 				</div>
 			</div>
