--- a/pages/africa.html
+++ b/pages/africa.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="shortcut icon" type="image/x-icon" href="./../favicon.ico">
+    <!-- <link rel="stylesheet" href="./../static/bootstrap/3.3.6/css/bootstrap.min.css"> -->
+    <script src="./../static/js/d3/min/d3.v4-9-1.min.js"></script>
+
     <title>geoPath measures</title>
 </head>
 
@@ -39,6 +43,31 @@
 </style>
 
 <body>
+	<header>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-2">
+					<img src="./../static/d3logo.png">
+				</div>
+				<div class="col-md-10">
+					<h1 class="logo">D3 Examples</h1>
+					<h4>Richard Dalton</h4>
+					<div class="btn-group btn-group-md" role="group" aria-label="...">
+						<a href="./../index.html" class="btn btn-default" role="button">Home</a>
+						<a href="./svg.html" class="btn btn-default" role="button">SVG</a>
+						<a href="./barChart.html" class="btn btn-default" role="button">Bar</a>
+						<a href="./pieChart.html" class="btn btn-default" role="button">Pie</a>
+						<a href="./bubbleChart.html" class="btn btn-default" role="button">Bubble</a>
+						<a href="./force.html" class="btn btn-default" role="button">Force</a>
+						<a href="./globe.html" class="btn btn-default" role="button">Globe</a>
+						<a href="./gesu-teaching.html" class="btn btn-default" role="button">gesu-teaching</a>
+						<a href="http://d3js.org" class="btn btn-default" role="button">D3.js</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
+
 <div id="content">
     <div class="info">Hover over a country</div>
     <svg width="620px" height="600px">
@@ -48,8 +77,6 @@
     </svg>
 </div>
 
-
-<script src="./../static/js/d3/min/d3.v4-9-1.min.js"></script>
 
 <script>
 
