--- a/pages/gesu-teaching.html
+++ b/pages/gesu-teaching.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link rel="shortcut icon" type="image/x-icon" href="./../favicon.ico">
 	<link rel="stylesheet" href="./../static/bootstrap/3.3.6/css/bootstrap.min.css">
 	<script type="text/javascript" src="./../static/js/d3/d3.v4.js"></script>
-	<title>d3 Examples</title>
+
+	<title>D3 Examples</title>
 </head>
 <body>
 
@@ -36,7 +39,9 @@
 
 <div class="container">
 	<h3>intro_d3js</h3>
-	<p>https://d3-graph-gallery.com/intro_d3js.html</p>
+	<p>
+		<a href="https://d3-graph-gallery.com/intro_d3js.html">https://d3-graph-gallery.com/intro_d3js.html</a>
+	</p>
 
 	<div class="col-md-6">
 		<div id="draw_here"></div>
