--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="robots" content="index, follow" />
+	<meta name="description" content="Just some D3.js examples.">
+	<meta name="keywords" content="HTML, CSS, JavaScript, D3.js, D3, data, visualization">
+	<meta name="author" content="Richard Dalton, Gesugao-san">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
     <link rel="stylesheet" href="./static/bootstrap/3.3.6/css/bootstrap.min.css">
     <script type="text/javascript" src="./static/js/d3/d3.v3.js"></script>
