--- a/pages/africa.html
+++ b/pages/africa.html
@@ -123,7 +123,7 @@
 
 
     // REQUEST DATA
-    d3.json('./static/data/africa.json', function(err, json) {
+    d3.json('./../static/data/africa.json', function(err, json) {
         update(json)
     })
 
