Disallow draggable for D3 divs for mobile

--- a/pages/barChart.html
+++ b/pages/barChart.html
@@ -44,7 +44,7 @@
     bar heights 0-500.</p>
 
     <div class="col-md-6">
-        <div id="draw_here"></div>
+        <div id="draw_here" draggable="false"></div>
     </div>
 
     <div class="col-md-6">
