--- a/pages/bubbleChart.html
+++ b/pages/bubbleChart.html
@@ -43,7 +43,7 @@
     <p>In this example, each data point consists of 3 numbers which we can use to plot the x and y position and the radius of each circle</p>
 
     <div class="col-md-6">
-        <div id="draw_here"></div>
+        <div id="draw_here" draggable="false"></div>
     </div>
 
     <div class="col-md-6">
