--- a/pages/force.html
+++ b/pages/force.html
@@ -45,7 +45,7 @@
     the details of which players kill other players.</p>
 
 	<div class="col-md-6">
-		<div id="draw_here"></div>
+		<div id="draw_here" draggable="false"></div>
 	</div>
 
 	<div class="col-md-6">
