--- a/pages/gesu-teaching.html
+++ b/pages/gesu-teaching.html
@@ -44,7 +44,7 @@
 	</p>
 
 	<div class="col-md-6">
-		<div id="draw_here"></div>
+		<div id="draw_here" draggable="false"></div>
 	</div>
 	<div class="col-md-6">
 		<!-- Add a svg shape. Note that the 'target' class is attributed to the circle -->
