--- a/pages/pieChart.html
+++ b/pages/pieChart.html
@@ -43,7 +43,7 @@
     <p>The conversion of data to appropriate arc sizes is handled by d3's pie layout.</p>
 
     <div class="col-md-6">
-        <div id="draw_here"></div>
+        <div id="draw_here" draggable="false"></div>
     </div>
 
     <div class="col-md-6">
