--- a/pages/svg.html
+++ b/pages/svg.html
@@ -45,7 +45,7 @@
     radius, fill color, and opacity.</p>
 
     <div class="col-md-6">
-        <div id="draw_here"></div>
+        <div id="draw_here" draggable="false"></div>
         <div id="buttons_here"></div>
     </div>
 
