--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     for each data item, and then within that div we render a heading for the key and a paragraph for the value.</p>
 
     <div class="col-md-6">
-        <div id="draw_here"></div>
+        <div id="draw_here" draggable="false"></div>
     </div>
 
     <div class="col-md-6">
