Teching in progress - chapter 3

--- a/pages/gesu-teaching.html
+++ b/pages/gesu-teaching.html
@@ -43,21 +43,75 @@
 		<a href="https://d3-graph-gallery.com/intro_d3js.html">https://d3-graph-gallery.com/intro_d3js.html</a>
 	</p>
 
+	<hr />
+
 	<div class="col-md-6">
-		<div id="draw_here" draggable="false"></div>
-	</div>
-	<div class="col-md-6">
+		<h3>First html document</h3>
+		<hr />
 		<!-- Add a svg shape. Note that the 'target' class is attributed to the circle -->
 		<svg>
-			<circle class="target" style="fill: #69b3a2" stroke="black" cx=50 cy=50 r=40></circle>
+			<circle class="target1" style="fill: #69b3a2" stroke="black" cx=50 cy=50 r=40></circle>
 		</svg>
+		<h3>The coordinate system</h3>
+		<hr />
+		<svg id="dataviz_area" height=200 width=450></svg>
+		<svg id="viz_area" height=200 width=450></svg>
+		<hr />
 	</div>
 </div>
 
 <script type="text/javascript">
+	// First html document
 	d3
-		.select(".target")  // select the elements that have the class 'target'
-		.style("stroke-width", 8) // change their style: stroke width is not equal to 8 pixels
+		.select(".target1")  // select the elements that have the class 'target'
+		.style("stroke-width", 8); // change their style: stroke width is not equal to 8 pixels
+
+
+	// The coordinate system
+	var svg = d3.select("#dataviz_area");
+	svg.append("circle")
+		.attr("cx", 2)
+		.attr("cy", 2)
+		.attr("r", 40)
+		.style("fill", "blue");
+	svg.append("circle")
+		.attr("cx", 140)
+		.attr("cy", 70)
+		.attr("r", 40)
+		.style("fill", "red");
+	svg.append("circle")
+		.attr("cx", 300)
+		.attr("cy", 100)
+		.attr("r", 40)
+		.style("fill", "green");
+
+
+	// From data to pixel: Scales
+	// Select the svg area
+	var svg = d3.select("#viz_area");
+
+	// Create a scale: transform value in pixel
+	var x = d3.scaleLinear()
+		.domain([0, 100])         // This is the min and the max of the data: 0 to 100 if percentages
+		.range([0, 400]);       // This is the corresponding value I want in Pixel
+	// Try console.log( x(25) ) to see what this x function does.
+
+	// Add 3 dots for 0, 50 and 100%
+	svg.append("circle")
+		.attr("cx", x(10))
+		.attr("cy", 100)
+		.attr("r", 40)
+		.style("fill", "blue");
+	svg.append("circle")
+		.attr("cx", x(50))
+		.attr("cy", 100)
+		.attr("r", 40)
+		.style("fill", "red");
+	svg.append("circle")
+		.attr("cx", x(100))
+		.attr("cy", 100)
+		.attr("r", 40)
+		.style("fill", "green");
 </script>
 
 </body>
