Hotfix "Uncaught Reference: require not defined"

--- a/pages/gesu-teaching3.html
+++ b/pages/gesu-teaching3.html
@@ -38,7 +38,7 @@
 </body>
 
 <script type="text/javascript">
-	const d3 = require('d3');
+	//const d3 = require('d3');
 
 	/// https://youtu.be/bp2GF8XcJdY
 	const svg = d3.select("#d3js_landing_area1");
