--- a/pages/gesu-teaching4.html
+++ b/pages/gesu-teaching4.html
@@ -96,6 +96,39 @@ var margin = {
 var treemap = d3.tree()
 	.size([width, height]);
 
+//const base_path = process.cwd() || ;
+const target_path = 'https://raw.githubusercontent.com/SS13HUB/ss13-projects-data/master/data/json/000.json'; //'..\\submodules\\ss13-projects-data\\data\\json\\';
+console.log(target_path);
+
+d3.json(target_path, function(data) {
+	console.log(data);
+	console.log('ok');
+	/* for (var i = 0; i < data.length; i++) {
+		console.log(data[i].Name);
+		console.log(data[i].Age);
+	} */
+});
+
+function read_files(target_path) {
+	let _out = {};
+	let _names = fs.readdirSync(target_path)
+		//.filter(item => !item.isDirectory())
+		.filter(name => path.extname(name) === target_ext);
+	if (local_debug) console.log('_names:', _names);
+
+	let _content = fs.readdirSync(target_path)
+		//.filter(item => !item.isDirectory())
+		.filter(name => path.extname(name) === target_ext)
+		.map(name => require(path.join(target_path, name)));
+	if (local_debug) console.log('_content:', _content);
+
+	for (let i = 0; i < _names.length; i++) {
+		const id = _names[i].split('.')[0];
+		_out[id] = _content[i];
+	}
+	return _out;
+}
+
 //	assigns the data to a hierarchy using parent-child relationships
 var nodes = d3.hierarchy(treeData);
 
