--- a/pages/gesu-teaching4.html
+++ b/pages/gesu-teaching4.html
@@ -186,10 +186,12 @@ const target_file1 = '0000';
 const target_path1 = target_dir + target_file1 + '.json';
 const target_file2 = '0001';
 const target_path2 = target_dir + target_file2 + '.json';
-const target_path3 = target_dir + 'merged/_fancy.json';
-console.log("target_path1", target_path1);
-console.log("target_path2", target_path2);
-console.log("target_path3", target_path3);
+const target_path3 = target_dir + 'merged/_fancy1.json';
+const target_path4 = target_dir + 'merged/_fancy2.json';
+console.log("target_path1:", target_path1);
+console.log("target_path2:", target_path2);
+console.log("target_path3:", target_path3);
+console.log("target_path4:", target_path3);
 
 // https://stackoverflow.com/a/16991355/8175291
 /*
@@ -212,7 +214,7 @@ console.log("my_JSON_object", my_JSON_object);
 		console.log('jsonResponse1:\n', target_file1, jsonResponse1);
 		const jsonResponse2 = await d3.json(target_path2, {credentials: 'same-origin'});
 		console.log('jsonResponse2:\n', target_file2, jsonResponse2);
-		const jsonResponse3 = await d3.json(target_path3, {credentials: 'same-origin'});
+		const jsonResponse3 = await d3.json(target_path4, {credentials: 'same-origin'});
 		console.log('jsonResponse3:\n', jsonResponse3);
 
 		const totalJson = [jsonResponse1, jsonResponse2]; //Object.assign(); // jsonResponse1 + jsonResponse2;
@@ -249,8 +251,10 @@ console.log("my_JSON_object", my_JSON_object);
 		// https://stackoverflow.com/q/68672935/8175291
 		var dataStructure2 = d3
 			.stratify()
-			.id(function(d) {return d.name;})
-			.parentId(function(d) {return d.parent.name;})
+			.id(function(d) {return d.id;})
+			//.id(function(d) {return d.name.full;})
+			.parentId(function(d) {return d.parent.id;})
+			//.parentId(function(d) {return d.parent.name;})
 			(jsonResponse3);
 		//
 
@@ -312,7 +316,7 @@ console.log("my_JSON_object", my_JSON_object);
 				.attr("x", 0)
 				.attr("y", 25) //function(d) { return d.children ? -20 : 20; })
 				.style("text-anchor", "middle")
-				.text(function(d) { return d.data.name; });
+				.text(function(d) { return d.data.name.full; });
 		//
 	} catch(error) {
 		// Do some error handling.
